--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 FLASK_APP=run
 FLASK_ENV=development
 FLASK_CONFIG=development
+DATABASE_URL=postgresql://postgres:python3@127.0.0.1:5432/BurgerZillaDB
